Update12 index.html

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     <div id="counter" class="counter" aria-hidden="true">0</div>
 
     <div id="timer" aria-hidden="true"></div>
-    <div id="hack-start" aria-hidden="true">ХАК НАЧАЛСЯ</div>
+    <div id="hack-start" aria-hidden="true">ИСЛАМ ЛОХ</div>
 
     <div class="infoLog" id="log"></div>
   </div>
