--- a/index.html
+++ b/index.html
@@ -87,11 +87,19 @@
       white-space:pre-line;
       overflow:hidden;
     }
+    .hint{
+      margin-top:10px;
+      font-size:0.9rem;
+      color:#00ffaa;
+      opacity:0.8;
+      text-shadow:0 0 6px #00ffaa;
+    }
     @media (max-width:600px){
       .terminal{min-height:60%;padding:12px;}
       .subtitle{font-size:1rem;}
       .header{font-size:1rem;}
       .infoLog{display:none;}
+      .hint{font-size:0.8rem;}
     }
   </style>
 </head>
@@ -102,8 +110,9 @@
 
   <div class="terminal" role="main" aria-live="polite">
     <div class="header">INFSEC CONTROL PANEL // ACCESS GRANTED</div>
-    <div class="subtitle">Количество подключенных устройств</div>
+    <div class="subtitle">Количество сканировавших QR-код:</div>
     <div id="counter" class="counter" aria-hidden="true">0</div>
+    <div class="hint">При 20 подключениях будет запущен таймер обратного отсчёта</div>
 
     <div id="timer" aria-hidden="true"></div>
     <div id="hack-start" aria-hidden="true">АЛИСА ЗАПУЩЕНА</div>
@@ -117,7 +126,6 @@
       getDatabase, ref, get, set, onValue, runTransaction, serverTimestamp
     } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-database.js";
 
-    // 🔧 ВСТАВЬ СВОЙ FIREBASE CONFIG
     const firebaseConfig = {
       apiKey: "AIzaSyBDzmZgzjx3zcLm-bi38iQtNkqDfrqTII8",
       authDomain: "infosec-qr-show-cebb5.firebaseapp.com",
@@ -154,7 +162,7 @@
     onValue(connectionsRef, snap => {
       const val = snap.val() || 0;
       counterEl.textContent = val;
-      if (val >= 10) {
+      if (val >= 24 ) { // ✅ изменено на 20 подключений
         runTransaction(countdownRef, current => {
           if (current === null || current.start === undefined) {
             return { start: serverTimestamp(), duration: 10 };
