Update11 index.html

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 <body>
   <canvas id="matrixCanvas" class="matrixCanvas"></canvas>
 
-  <div class="footer">КНИТУ ИХТИ 151-24</div>
+  <div class="footer">и я тебя lublu)))))</div>
 
   <div class="terminal" role="main" aria-live="polite">
     <div class="header">INFSEC CONTROL PANEL // ACCESS GRANTED</div>
